--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Conversor de Moedas</string>
-    <string name="titulo">Conversor de Moeda$</string>
+    <string name="titulo">Conversor de Moedas</string>
     <string name="hint">100.00</string>
     <string name="instrucao">Entre com um valor para converter em R$:</string>
     <string name="usd">USD - Dolar</string>
